@@ -3,6 +3,8 @@
 
 \section c019 version 0.18 -> 0.18+
 
+ - CDiskController is no longer a CPCIDevice. This alows for non-PCI diskcontrollers (like the
+   floppy controller. (29-apr-2008, Camiel Vanderhoeven)
  - Added memory map dumping and memory range checking. (29-apr-2008, Brian Wheeler)
  - Rewrote DMA code to make it ready for floppy support. (18-apr-2008, Brian Wheeler)
  - More questions in debug confuration script. (03-apr-2008, Camiel Vanderhoeven)
